# transcript-utils

./: CDS_finder.py  LICENSE  README.md  pyproject.toml
longread_utils/: CDS_finder.py
transcript_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
