[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcript_utils"
version = "0.1.1"
description = "Utilities for mRNA transcriptome/translatome research."
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Colin Mikulski", email = "cmikulski@vassar.edu" },
]

license = { text = "MIT" }

# keywords = ["python", "example", "template"]
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]

dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "regex>=2024.11.6"
]

# [project.optional-dependencies]
# dev = [
#     "pytest",
#     "black",
#     "flake8",
# ]

[tool.setuptools]
packages = ["longread_utils"]
